@@ -1,3 +1,15 @@
+2013-05-26  Thomas Schwinge  <thomas@codesourcery.com>
+
+	* stdio-common/bug26.c (main): Correct fscanf template.
+
+	* sysdeps/mach/hurd/dl-sysdep.c (_dl_sysdep_start:go): Don't
+	declare _dl_skip_args.
+
+	* sysdeps/mach/hurd/i386/init-first.c (_dl_non_dynamic_init):
+	Don't declare.
+
+	* manual/platform.texi: Add missing @end deftypefun.
+
 2013-05-24  Joseph Myers  <joseph@codesourcery.com>
 
 	[BZ #15529]
